# VisualTracking

./: .gitignore  CMakeLists.txt  README.md
GraphCut/: CMakeLists.txt  main.cpp
GraphCut/src/: main.cpp
KCF/: CMakeLists.txt  main.cpp
KCF/src/: GetFramesByPos.cpp  GetFramesByPos.h  GetFramesByPosTxt.cpp  GetFramesByPosTxt.h  GetTrackingPosTxt.cpp  GetTrackingPosTxt.h  kcftracker.cpp  kcftracker.hpp  main.cpp  runtracker.cpp
KalmanFilter/: CMakeLists.txt  main.cpp
KalmanFilter/src/: KalmanFilter.cpp  KalmanFilter.h  main.cpp
LineDetect/: CMakeLists.txt  main.cpp
LineDetect/src/: CMap.cpp  CMap.h  LineDetect.cpp  LineDetect.h
MotionTargetDetect/: CMakeLists.txt  main.cpp
MotionTargetDetect/src/: MotionTargetDetect.cpp  MotionTargetDetect.h
Track/: CMakeLists.txt  main.cpp
TreeDetect/: CMakeLists.txt  main.cpp
TreeDetect/src/: TreeDetect.cpp  TreeDetect.h  main.cpp
trainSVM/: CMakeLists.txt  main.cpp  test.cpp  test.cppp  total.cpp  total.cppp
trainSVM/liblinear/: LibLinear.vcxproj  linear.cpp
trainSVM/liblinear/x64/Debug/: LibLinear.idb
trainSVM/liblinear/x64/Debug/LibLinear.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  LibLinear.lastbuildstate  lib.command.1.tlog
trainSVM/liblinear/x64/Release/LibLinear.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  LibLinear.lastbuildstate  lib.command.1.tlog
trainSVM/liblinear_2.1/: README.html  README.md  heart_scale.model  predict.cxxx  train.cxxx
utils/: CMakeLists.txt  common.cpp  common.h  utils.h  utils_test.cpp
utils_opencv/: CMakeLists.txt  utils_opencv.cpp  utils_opencv.h  utils_opencv_test.cpp
